--- a/brd-android/kyc/src/main/AndroidManifest.xml
+++ b/brd-android/kyc/src/main/AndroidManifest.xml
@@ -2,4 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.fabriik.kyc">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <application
+        android:allowBackup="false"
+        android:usesCleartextTraffic="false">
+
+        <activity
+            android:name=".ui.KycActivity"
+            android:theme="@style/AppTheme.Kyc" />
+
+    </application>
 </manifest>
