--- a/brd-android/kyc/src/main/AndroidManifest.xml
+++ b/brd-android/kyc/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
 
         <activity
             android:name=".ui.KycActivity"
-            android:theme="@style/AppTheme.Kyc" />
+            android:theme="@style/AppTheme.Fabriik" />
 
     </application>
 </manifest>
