--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,5 @@ cosmos-bundled/build-frameworks/
 !cosmos-bundled/build-frameworks/Cosmos.xcframework/Info.plist
 !cosmos-bundled/build-frameworks/Cosmos.xcframework/ios-arm64/Cosmos.framework/Info.plist
 !cosmos-bundled/build-frameworks/Cosmos.xcframework/ios-x86_64-simulator/Cosmos.framework/Info.plist
+
+*.env
