--- a/brd-ios/config.xcconfig
+++ b/brd-ios/config.xcconfig
@@ -11,3 +11,6 @@
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
 #include ".env"
+
+API_TOKEN = $(DEBUG_TOKEN)
+API_URL = $(DEBUG_URL)
