--- a/brd-ios/breadwallet/theme.plist
+++ b/brd-ios/breadwallet/theme.plist
@@ -4,84 +4,90 @@
 <dict>
 	<key>fonts</key>
 	<dict/>
+	<key>Item 0</key>
+	<string>Degular-Bold.otf</string>
+	<key>Item 1</key>
+	<string>Degular-Regular.otf</string>
+	<key>Item 2</key>
+	<string>Degular-Semibold.otf</string>
 	<key>colors</key>
-    <dict>
-        <key>primary</key>
-        <string>2C78FF</string>
-        <key>secondary</key>
-        <string>122348</string>
-        <key>tertiary</key>
-        <string>EEF4FF</string>
-        <key>background-01</key>
-        <string>FFFFFF</string>
-        <key>background-02</key>
-        <string>F1F3F4</string>
-        <key>background-03</key>
-        <string>FFFFFF</string>
-        <key>text-01</key>
-        <string>2E3134</string>
-        <key>text-02</key>
-        <string>5F6368</string>
-        <key>error</key>
-        <string>D72431</string>
-        <key>success</key>
-        <string>00A86E</string>
-        <key>link-01</key>
-        <string>122348</string>
-        <key>link-02</key>
-        <string>0053E7</string>
-        <key>contrast-01</key>
-        <string>2E3134</string>
-        <key>contrast-02</key>
-        <string>FFFFFF</string>
-        <key>contrast-03</key>
-        <string>FFFFFF</string>
-        <key>outline-01</key>
-        <string>BDC1C6</string>
-        <key>outline-02</key>
-        <string>DADCE0</string>
-        <key>outline-03</key>
-        <string>9AA0A6</string>
-        <key>icons-01</key>
-        <string>3C4043</string>
-        <key>icons-02</key>
-        <string>5F6368</string>
-        <key>inverse-background-01</key>
-        <string>2E3134</string>
-        <key>inverse-text-01</key>
-        <string>FFFFFF</string>
-        <key>inverse-text-02</key>
-        <string>DADCE0</string>
-        <key>inverse-error</key>
-        <string>FF7F89</string>
-        <key>inverse-success</key>
-        <string>00A86E</string>
-        <key>inverse-contrast-03</key>
-        <string>2E3134</string>
-        <key>inverse-link-01</key>
-        <string>FFFFFF</string>
-        <key>inverse-outline-01</key>
-        <string>80868B</string>
-        <key>inverse-outline-02</key>
-        <string>5F6368</string>
-        <key>inverse-outline-03</key>
-        <string>9AA0A6</string>
-        <key>inverse-icons-01</key>
-        <string>FFFFFF</string>
-        <key>inverse-icons-02</key>
-        <string>DADCE0</string>
-        <key>interaction-primary-hover</key>
-        <string>0861FF</string>
-        <key>interaction-primary-pressed</key>
-        <string>0053E7</string>
-        <key>interaction-primary-selected</key>
-        <string>0053E7</string>
-        <key>interaction-primary-focused</key>
-        <string>2C78FF</string>
-        <key>interaction-primary-disabled</key>
-        <string>9AA0A6</string>
-        <key>interaction-listing-hover</key>
-        <string>F1F3F4</string>
+	<dict>
+		<key>primary</key>
+		<string>2C78FF</string>
+		<key>secondary</key>
+		<string>122348</string>
+		<key>tertiary</key>
+		<string>EEF4FF</string>
+		<key>background-01</key>
+		<string>FFFFFF</string>
+		<key>background-02</key>
+		<string>F1F3F4</string>
+		<key>background-03</key>
+		<string>FFFFFF</string>
+		<key>text-01</key>
+		<string>2E3134</string>
+		<key>text-02</key>
+		<string>5F6368</string>
+		<key>error</key>
+		<string>D72431</string>
+		<key>success</key>
+		<string>00A86E</string>
+		<key>link-01</key>
+		<string>122348</string>
+		<key>link-02</key>
+		<string>0053E7</string>
+		<key>contrast-01</key>
+		<string>2E3134</string>
+		<key>contrast-02</key>
+		<string>FFFFFF</string>
+		<key>contrast-03</key>
+		<string>FFFFFF</string>
+		<key>outline-01</key>
+		<string>BDC1C6</string>
+		<key>outline-02</key>
+		<string>DADCE0</string>
+		<key>outline-03</key>
+		<string>9AA0A6</string>
+		<key>icons-01</key>
+		<string>3C4043</string>
+		<key>icons-02</key>
+		<string>5F6368</string>
+		<key>inverse-background-01</key>
+		<string>2E3134</string>
+		<key>inverse-text-01</key>
+		<string>FFFFFF</string>
+		<key>inverse-text-02</key>
+		<string>DADCE0</string>
+		<key>inverse-error</key>
+		<string>FF7F89</string>
+		<key>inverse-success</key>
+		<string>00A86E</string>
+		<key>inverse-contrast-03</key>
+		<string>2E3134</string>
+		<key>inverse-link-01</key>
+		<string>FFFFFF</string>
+		<key>inverse-outline-01</key>
+		<string>80868B</string>
+		<key>inverse-outline-02</key>
+		<string>5F6368</string>
+		<key>inverse-outline-03</key>
+		<string>9AA0A6</string>
+		<key>inverse-icons-01</key>
+		<string>FFFFFF</string>
+		<key>inverse-icons-02</key>
+		<string>DADCE0</string>
+		<key>interaction-primary-hover</key>
+		<string>0861FF</string>
+		<key>interaction-primary-pressed</key>
+		<string>0053E7</string>
+		<key>interaction-primary-selected</key>
+		<string>0053E7</string>
+		<key>interaction-primary-focused</key>
+		<string>2C78FF</string>
+		<key>interaction-primary-disabled</key>
+		<string>9AA0A6</string>
+		<key>interaction-listing-hover</key>
+		<string>F1F3F4</string>
 	</dict>
 </dict>
 </plist>
