chore: add Roboto font family

--- a/brd-ios/breadwallet/Info.plist
+++ b/brd-ios/breadwallet/Info.plist
@@ -156,6 +156,12 @@
 	</array>
 	<key>UIAppFonts</key>
 	<array>
+		<string>Roboto-Bold.otf</string>
+		<string>Roboto-Regular.otf</string>
+		<string>Roboto-Medium.otf</string>
+		<string>Degular-Bold.otf</string>
+		<string>Degular-Regular.otf</string>
+		<string>Degular-Semibold.otf</string>
 		<string>Font-Bold.otf</string>
 		<string>Font-Book.otf</string>
 		<string>Font-Medium.otf</string>
