--- a/brd-ios/breadwallet/theme.plist
+++ b/brd-ios/breadwallet/theme.plist
@@ -3,13 +3,14 @@
 <plist version="1.0">
 <dict>
 	<key>fonts</key>
-	<dict/>
-	<key>Item 0</key>
-	<string>Degular-Bold.otf</string>
-	<key>Item 1</key>
-	<string>Degular-Regular.otf</string>
-	<key>Item 2</key>
-	<string>Degular-Semibold.otf</string>
+	<dict>
+		<key>Degular-Bold</key>
+		<string>Degular-Bold.otf</string>
+		<key>Degular-Regular</key>
+		<string>Degular-Regular.otf</string>
+		<key>Degular-Semibold</key>
+		<string>Degular-SemiBold.otf</string>
+	</dict>
 	<key>colors</key>
 	<dict>
 		<key>primary</key>
