--- a/brd-ios/breadwallet/Info.plist
+++ b/brd-ios/breadwallet/Info.plist
@@ -69,6 +69,26 @@
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleURLName</key>
+			<string>xrpl</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>xrpl</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>bitcoinsv</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>bitcoinsv</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
 			<string>ethereum</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
