--- a/brd-ios/breadwallet/theme.plist
+++ b/brd-ios/breadwallet/theme.plist
@@ -33,6 +33,8 @@
 		<string>D72431</string>
 		<key>success</key>
 		<string>00A86E</string>
+		<key>pending</key>
+		<string>F8BA37</string>
 		<key>link-01</key>
 		<string>122348</string>
 		<key>link-02</key>
