--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -125,7 +125,7 @@ jobs:
           name: Build Clean
           command: |
             cd brd-ios
-            xcodebuild clean -workspace breadwallet.xcworkspace -scheme breadwallet | xcpretty
+            xcodebuild clean -workspace breadwallet.xcworkspace -scheme wallet | xcpretty
 
 
       - run:
