--- a/brd-ios/debug.xcconfig
+++ b/brd-ios/debug.xcconfig
@@ -13,6 +13,6 @@
 
 #include ".env"
 
-API_TOKEN = $(DEV_TOKEN)
-API_URL = $(DEV_URL)
+API_TOKEN = $(DEBUG_TOKEN)
+API_URL = $(DEBUG_URL)
 IS_TEST=true
