--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -135,9 +135,14 @@ jobs:
             BRD_ENV=.env
             touch $BRD_ENV
 
+            echo "// PRODUCTION" >> $BRD_ENV
+            echo "API_URL=$PROD_URL" >> $BRD_ENV
+            echo "API_TOKEN=$PROD_TOKEN" >> $BRD_ENV
+            echo "" >> $BRD_ENV
+
             echo "// DEVELOPMENT" >> $BRD_ENV
-            echo "DEV_URL=$DEV_URL" >> $BRD_ENV
-            echo "DEV_TOKEN=$DEV_TOKEN" >> $BRD_ENV
+            echo "DEBUG_URL=$DEV_URL" >> $BRD_ENV
+            echo "DEBUG_TOKEN=$DEV_TOKEN" >> $BRD_ENV
             echo "IS_TEST=true" >> $BRD_ENV
             echo "" >> $BRD_ENV
 
@@ -145,10 +150,6 @@ jobs:
             echo "STAGING_URL=$STAGING_URL" >> $BRD_ENV
             echo "STAGING_TOKEN=$STAGING_TOKEN" >> $BRD_ENV
             echo "" >> $BRD_ENV
-
-            echo "// PRODUCTION" >> $BRD_ENV
-            echo "PROD_URL=$PROD_URL" >> $BRD_ENV
-            echo "PROD_TOKEN=$PROD_TOKEN" >> $BRD_ENV
 
             cd ..
             echo "sdk.dir=/usr/local/share/android-commandlinetools/cmdline-tools/homebrew/bin" > ./local.properties
