--- a/brd-ios/dev.xcconfig
+++ b/brd-ios/dev.xcconfig
@@ -13,6 +13,6 @@
 
 #include ".env"
 
-API_URL=$(DEV_URL)
-API_TOKEN=$(DEV_TOKEN)
+API_URL=$(DEBUG_URL)
+API_TOKEN=$(DEBUG_TOKEN)
 IS_TEST=$(IS_TEST)
