--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -164,7 +164,7 @@ jobs:
             fi
 
       - run:
-          name: Build Walletkit Subproject
+          name: Build Cosmos Project
           command: |
             export ANDROID_SDK_ROOT=/usr/local/share/android-commandlinetools/cmdline-tools/latest/bin
             cp ./local.properties external/walletKit/walletKitJava/local.properties
