--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,7 +92,7 @@ jobs:
             export JAVA_HOME=/Library/Java/JavaVirtualMachines/adoptopenjdk-8.jdk/Contents/Home
             ls -la /Library/Java/JavaVirtualMachines/adoptopenjdk-8.jdk/Contents/Home
 
-            brew install ghostscript SwiftLint
+            brew install SwiftLint
             brew install --cask android-commandlinetools
 
       - run:
