--- a/brd-ios/staging.xcconfig
+++ b/brd-ios/staging.xcconfig
@@ -1,5 +1,5 @@
 //
-//  debug.xcconfig
+//  staging.xcconfig
 //  breadwallet
 //
 //  Created by Rok on 07/03/2022.
@@ -15,3 +15,4 @@
 
 API_URL=$(STAGING_URL)
 API_TOKEN=$(STAGING_TOKEN)
+IS_TEST=$(STAGING_IS_TEST)
