--- a/brd-ios/breadwallet/Info.plist
+++ b/brd-ios/breadwallet/Info.plist
@@ -6,6 +6,10 @@
 	<string>$(API_TOKEN)</string>
 	<key>API_URL</key>
 	<string>$(API_URL)</string>
+	<key>CHECKOUT_API_TOKEN</key>
+	<string>$(CHECKOUT_API_TOKEN)</string>
+	<key>IS_SANDBOX</key>
+	<false/>
 	<key>APP_GROUPS_ID</key>
 	<string>group.${APP_GROUPS_ID}</string>
 	<key>CFBundleDevelopmentRegion</key>
