--- a/brd-ios/breadwallet/Info.plist
+++ b/brd-ios/breadwallet/Info.plist
@@ -9,7 +9,7 @@
 	<key>CHECKOUT_API_TOKEN</key>
 	<string>$(CHECKOUT_API_TOKEN)</string>
 	<key>IS_SANDBOX</key>
-	<false/>
+	<string>$(IS_SANDBOX)</string>
 	<key>APP_GROUPS_ID</key>
 	<string>group.${APP_GROUPS_ID}</string>
 	<key>CFBundleDevelopmentRegion</key>
