--- a/brd-ios/breadwallet.xcodeproj/xcshareddata/xcschemes/wallet-stg.xcscheme
+++ b/brd-ios/breadwallet.xcodeproj/xcshareddata/xcschemes/wallet-stg.xcscheme
@@ -102,7 +102,7 @@
       buildConfiguration = "Debug">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Staging"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
