--- a/brd-ios/breadwallet/Info.plist
+++ b/brd-ios/breadwallet/Info.plist
@@ -2,14 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleIconFile</key>
+	<string>$(APP_ICON)</string>
 	<key>API_TOKEN</key>
 	<string>$(API_TOKEN)</string>
 	<key>API_URL</key>
 	<string>$(API_URL)</string>
-	<key>CHECKOUT_API_TOKEN</key>
-	<string>$(CHECKOUT_API_TOKEN)</string>
-	<key>IS_SANDBOX</key>
-	<string>$(IS_SANDBOX)</string>
 	<key>APP_GROUPS_ID</key>
 	<string>group.${APP_GROUPS_ID}</string>
 	<key>CFBundleDevelopmentRegion</key>
@@ -142,7 +140,11 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>561</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>CHECKOUT_API_TOKEN</key>
+	<string>$(CHECKOUT_API_TOKEN)</string>
+	<key>IS_SANDBOX</key>
+	<string>$(IS_SANDBOX)</string>
 	<key>IS_TEST</key>
 	<string>$(IS_TEST)</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
