--- a/brd-ios/staging.xcconfig
+++ b/brd-ios/staging.xcconfig
@@ -17,3 +17,5 @@ API_URL=$(STAGING_URL)
 API_TOKEN=$(STAGING_TOKEN)
 IS_TEST=$(STAGING_IS_TEST)
 CHECKOUT_API_TOKEN=$(STAGING_CHECKOUT_TOKEN)
+
+APP_ICON=AppIconStg
