--- a/brd-ios/breadwallet/Info.plist
+++ b/brd-ios/breadwallet/Info.plist
@@ -138,7 +138,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<string>591</string>
 	<key>CHECKOUT_API_TOKEN</key>
 	<string>$(CHECKOUT_API_TOKEN)</string>
 	<key>IS_SANDBOX</key>
