--- a/.gitignore
+++ b/.gitignore
@@ -106,6 +106,7 @@ fabric.properties
 /*.gcno
 
 ## xcode-frameworks folders and plists so that xcode does not complain prior first build of Cosmos.xcframework
+cosmos-bundled/build-frameworks/
 
 *.env
 
