--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -142,6 +142,12 @@ jobs:
             fi
 
       - run:
+          name: Build Cosmos Project
+          command: |
+            cd brd-ios/scripts
+            ./cosmos_apple_silicon.sh
+
+      - run:
           name: Set Versions
           command: |
             mainBundleShortVersionString=4.11.0
