--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,27 +110,10 @@ jobs:
 
 
       - run:
-          name: Create .env and local.properties and fix build.gradle
+          name: Create .env
           command: |
-            cd brd-ios
-            BRD_ENV=.env
-            touch $BRD_ENV
-
-            echo "// PRODUCTION" >> $BRD_ENV
-            echo "API_URL=$PROD_URL" >> $BRD_ENV
-            echo "API_TOKEN=$PROD_TOKEN" >> $BRD_ENV
-            echo "" >> $BRD_ENV
-
-            echo "// DEVELOPMENT" >> $BRD_ENV
-            echo "DEBUG_URL=$DEV_URL" >> $BRD_ENV
-            echo "DEBUG_TOKEN=$DEV_TOKEN" >> $BRD_ENV
-            echo "IS_TEST=true" >> $BRD_ENV
-            echo "" >> $BRD_ENV
-
-            echo "// STAGING" >> $BRD_ENV
-            echo "STAGING_URL=$STAGING_URL" >> $BRD_ENV
-            echo "STAGING_TOKEN=$STAGING_TOKEN" >> $BRD_ENV
-            echo "" >> $BRD_ENV
+            cd brd-ios/ci-scripts
+            ./ci_post_clone.sh
 
       - run:
           name: Create exportOptions.plist
