fix: ci_post_install.

--- a/brd-ios/debug.xcconfig
+++ b/brd-ios/debug.xcconfig
@@ -11,7 +11,7 @@
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
 
-#include "../.env"
+#include ".env"
 
 API_URL=$(DEBUG_URL)
 API_TOKEN=$(DEBUG_TOKEN)
