--- a/brd-ios/prod.xcconfig
+++ b/brd-ios/prod.xcconfig
@@ -11,6 +11,6 @@
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
 
-#include "../.env"
+#include ".env"
 
 APP_ICON=AppIcon
