--- a/brd-ios/staging.xcconfig
+++ b/brd-ios/staging.xcconfig
@@ -11,7 +11,7 @@
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
 
-#include "../.env"
+#include ".env"
 
 API_URL=$(STAGING_URL)
 API_TOKEN=$(STAGING_TOKEN)
