chore: update font

--- a/brd-ios/breadwallet/Info.plist
+++ b/brd-ios/breadwallet/Info.plist
@@ -176,7 +176,7 @@
 	<array>
 		<string>Roboto-Regular.otf</string>
 		<string>Roboto-Medium.otf</string>
-		<string>SofiaPro-Regular.otf</string>
+		<string>SofiaPro-Bold.otf</string>
 	</array>
 	<key>UIBackgroundModes</key>
 	<array>
