--- a/brd-ios/breadwallet/breadwallet.entitlements
+++ b/brd-ios/breadwallet/breadwallet.entitlements
@@ -4,11 +4,16 @@
 <dict>
 	<key>aps-environment</key>
 	<string>development</string>
+	<key>com.apple.developer.associated-domains</key>
+	<array>
+		<string>applinks:*.brd.com</string>
+		<string>applinks:brd.com</string>
+	</array>
 	<key>com.apple.developer.default-data-protection</key>
 	<string>NSFileProtectionComplete</string>
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array>
-		<string>iCloud.com.placeholder.app</string>
+		<string>iCloud.$(CFBundleIdentifier)</string>
 	</array>
 	<key>com.apple.developer.icloud-services</key>
 	<array>
@@ -18,7 +23,7 @@
 	<string>$(TeamIdentifierPrefix)$(CFBundleIdentifier)</string>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.placeholder.app</string>
+	<string>group.$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	</array>
 	<key>keychain-access-groups</key>
 	<array>
