Chore: resking on screen keyboard.

--- a/brd-ios/breadwallet/theme.plist
+++ b/brd-ios/breadwallet/theme.plist
@@ -53,6 +53,8 @@
 		<string>D5554E</string>
 		<key>error-02</key>
 		<string>FAEAE9</string>
+		<key>primary-pressed</key>
+		<string>559085</string>
 	</dict>
 </dict>
 </plist>
