--- a/.phrase.yml
+++ b/.phrase.yml
@@ -1,15 +1,15 @@
-﻿phrase:
+phrase:
   push:
     sources:
     - file: ./brd-ios/breadwallet/src/Strings/en.lproj/Localizable.strings
       project_id: "0ebde326e161754ca17ab550ff6fe07a"
-      params: 
+      params:
         file_format: strings
         locale_id: en
         update_translations: true
     - file: ./brd-ios/breadwalletWidget/en.lproj/BreadWalletWidget.strings
       project_id: "fd548746242c61f1dbc394156c78b468"
-      params: 
+      params:
         file_format: strings
         locale_id: en
         update_translations: true
@@ -23,7 +23,7 @@
         encoding: UTF-8
     - file: ./brd-ios/breadwalletWidget/<locale_code>.lproj/BreadwalletWidget.strings
       project_id: "fd548746242c61f1dbc394156c78b468"
-      params: 
+      params:
         file_format: strings
         include_unverified_translations: true
         encoding: UTF-8
